--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,7 @@ classifiers =
 packages = oceanscript
 package_dir =
         = Source
+
+[options.entry_points]
+console_scripts =
+    oceanscript=oceanscript.cli:main
