Tests: Run `__main__` as a script instead of a function

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ package_dir =
 
 [options.entry_points]
 console_scripts =
-    oceanscript=oceanscript.__main__:main
+    oceanscript=oceanscript.__main__
