--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ package_dir =
 
 [options.entry_points]
 console_scripts =
-    oceanscript=oceanscript.__main__
+    oceanscript=oceanscript.__main__:main
